# coursework5

./: .gitignore  Makefile  README.md  configmap-backend.yaml  deployment-backend.yaml  deployment-celery.yaml  deployment-frontend.yaml  deployment-rabbitmq.yaml  docker-compose.yaml  hpa-backend.yaml  hpa-celery.yaml  hpa-frontend.yaml  job-migrations.yaml  job-test.yaml  limit-range-deploy.yaml  postgres-replication.sh  pv-database.yaml  resource-quota-deploy.yaml  secret-backend.yaml  service-account-deploy.yaml  service-backend.yaml  service-database-headless.yaml  service-database-public.yaml  service-frontend.yaml  service-rabbitmq.yaml  statefulset-database.yaml  test-job.yaml  test-migrations.yaml  test-replication.sh  test-statefulset.yaml
frontend/: Dockerfile  package.json  (+2 more)
shares/: .env.example  manage.py  poetry.toml  pyproject.toml
shares/shares/: asgi.py  settings.py  urls.py  wsgi.py
stocktrader/: .env.example  .flake8  Dockerfile  celery-entrypoint.sh  celerybeat-entrypoint.sh  django-entrypoint.sh  migrations-entrypoint.sh  pyproject.toml  pytest.ini
stocktrader/jauth/: apps.py  middlewares.py  serializers.py  services.py  urls.py  views.py
stocktrader/pyex/: apps.py  services.py  urls.py  views.py
stocktrader/shares/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
stocktrader/shares/migrations/: 0001_initial.py
stocktrader/stocktrader/: __init__.py  asgi.py  celery.py  dbrouters.py  settings.py  tasks.py  urls.py  wsgi.py
stocktrader/tests/: conftest.py
stocktrader/tests/auth_tests/: conftest.py  test_middlewares.py  test_serializers.py  test_services.py  test_views.py
stocktrader/tests/pyex_tests/: test_services.py  test_views.py
stocktrader/tests/shares_tests/: conftest.py  test_models.py  test_permissions.py  test_views.py
stocktrader/tests/stocktrader_tests/: test_tasks.py
stocktrader/user/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
(+35 files in other folders)
