[tool.poetry]
name = "shares"
version = "0.1.0"
description = "Application for trading on stock markets"
authors = ["twelve <kana.suzucki@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
